Prevent code.node from wrapping on linebreaks

--- a/css/docs.css
+++ b/css/docs.css
@@ -147,6 +147,7 @@ code.node {
     border: 1px solid #B68181;
     background: #fff0f0;
     color: #555;
+    white-space:nowrap;
 }
 
 @media handheld, only screen and (max-width: 755px) {
